PAY-5033 replaced Principal with RequestHeader map